--- a/views/comment-chain.jade
+++ b/views/comment-chain.jade
@@ -4,7 +4,7 @@ div.buttonWrapper
 	a.btn.btn-primary.btn-post-comment.pull-left#postCommentButton(title="save comment" style='margin-top:5px;' ng-click='postACommentClicked()') Save
 	br
 h3.comments-title
-a#showCommentLink.cursor(ng-click="showCommentToggle($parent.tip)" style='float:right; cursor: pointer;') Toggle Comments		
+a#showCommentLink.cursor(ng-click="showCommentToggle($parent.tip)" style='float:right; cursor: pointer;' ng-show="$parent.tip.comments.length > 0") Toggle Comments		
 ul.panel-body.comment-detail-list.commentList(style='margin-top:25px;' ng-show='')
 	.row.media(ng-repeat="comment in $parent.tip.comments | orderBy:'-commentPoints'")
 		div#commentWrapper( style='display:inline-block; width:100%;' ng-show='!isReplyComment(comment)')
